Form element z-index fix

--- a/editor/elements.css
+++ b/editor/elements.css
@@ -16,7 +16,7 @@
 .form {
 	text-align: center;
     position: relative;
-	z-index: -1;
+	z-index: 1;
 }
 .form form li {
 	list-style-type: none;
